# cg1

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
CMake/Modules/: CG1Helper.cmake
common/: CMakeLists.txt
common/glsl/: geometry.frag  geometry.vert  mesh.frag  mesh.vert  simple.frag  simple.vert  ssao.frag  ssao.vert
common/include/gui/: AbstractViewer.h  Camera.h  GLBuffer.h  GLShader.h  GLVertexArray.h  ShaderPool.h  SliderHelper.h
common/include/math/: BoundingBox.h
common/include/util/: GLDebug.h  OpenMeshUtils.h  UnionFind.h
common/src/gui/: AbstractViewer.cpp  Camera.cpp  GLBuffer.cpp  GLShader.cpp  GLVertexArray.cpp  ShaderPool.cpp  SliderHelper.cpp
common/src/util/: GLDebug.cpp  OpenMeshUtils.cpp  UnionFind.cpp
exercise1/: CMakeLists.txt
exercise1/glsl/: shader.frag  shader.vert
exercise1/include/: Viewer.h
exercise1/src/: Viewer.cpp  main.cpp
exercise2/: CMakeLists.txt
exercise2/glsl/: sky.frag  sky.vert  terrain.frag  terrain.tesc  terrain.tese  terrain.vert
exercise2/include/: Primitives.h  ShellExtraction.h  Stripification.h  Viewer.h  sample_set.h
exercise2/src/: Primitives.cpp  Stripification.cpp  SurfaceArea.cpp  Viewer.cpp
exercise3/: CMakeLists.txt
exercise3/include/: AABBTree.h  Box.h  GridTraverser.h  ShellExtraction.h  Smoothing.h  Stripification.h  SurfaceArea.h  Viewer.h  Volume.h
exercise3/src/: AABBTree.cpp  Box.cpp  HashGrid.cpp  Primitives.cpp  ShellExtraction.cpp  Smoothing.cpp  Stripification.cpp  SurfaceArea.cpp  Triangle.cpp  Viewer.cpp  Volume.cpp
exercise4/: CMakeLists.txt
exercise4/include/: AABBTree.h  GridTraverser.h  GridUtils.h  HashGrid.h  LineSegment.h  Point.h  Registration.h  Triangle.h  Viewer.h
exercise4/src/: Box.cpp  GridTraverser.cpp  LineSegment.cpp  Parametrization.cpp  Point.cpp  Registration.cpp  Triangle.cpp  Viewer.cpp
exercise5/: CMakeLists.txt
exercise5/include/: Parametrization.h
exercise5/src/: main.cpp
solution/linux/: Exercise1  Exercise2  Exercise4  Exercise5
